src/test/resources/org/nest/spl/_cocos/invalid/funNotDefined.simple
module org.nest.spl._cocos.funNotDefined

bar() /* not defined */
EmptyNeuron.bar() #TODO implement a resolving mechanism
# not defined
random(2) # not defined with parameter